deployment/azure/multicluster1NetHeadless/manifest/1-application-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: staff-service
spec:
  selector:
    matchLabels:
      app: staff-service
  serviceName: fleetman-staff-service
  replicas: 2
  template: # template for the pods
    metadata:
      labels:
        app: staff-service
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: staff-service
        image: nathluu/istio-fleetman-staff-service:8
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
