deployment/azure/multicluster1NetHeadless/manifest/2-application-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-staff-service
spec:
  selector:
    app: staff-service
  ports:
    - name: http
      port: 8080
  type: ClusterIP
  clusterIP: None
