deployment/azure/multicluster1NetHeadless/manifest/6-headless-svc-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: fleetman-staff-service-se
spec:
  hosts:
  - "10-1-4-102.fleetman-staff-service.default.svc.cluster.local"
  location: MESH_INTERNAL
  ports:
  - number: 8080
    name: http
    protocol: HTTP
  resolution: DNS
